--- a/app.json
+++ b/app.json
@@ -68,7 +68,7 @@
         "ALIVE_NAME": {
             "description": " Enter your name ! ",
             "required": true,
-            "value": "➳ᴹᴿ✿࿐𝑳𝑶𝑮𝑬𝑺𝑯⏤͟͟͞͞★"
+            "value": "Eliza"
         }
     },
     "addons": [],
